--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -47,6 +47,7 @@
   "title": "Title",
   "the_maximum_of_answer_is": "The maximum of answer is",
   "u": "U",
+  "update_category": "Update Category",
   "user_list": "User List",
   "user_management": "User Management"
 }
