--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -55,6 +55,8 @@
   "the_maximum_of_answer_is": "The maximum of answer is",
   "try_your_challenge": "Try your challenge",
   "u": "U",
+  "update": "Update",
+  "update_quiz": "Update quiz",
   "update_category": "Update Category",
   "user_list": "User List",
   "user_management": "User Management",
