--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,6 +12,7 @@
   "category_name": "Category Name",
   "category_list": "Category List",
   "create": "Create",
+  "created_at": "Created At",
   "create_new": "Create New",
   "create_new_category": " Create New Category",
   "create_new_quiz": "Create New Quiz",
