--- a/src/locales/kh.json
+++ b/src/locales/kh.json
@@ -1,5 +1,6 @@
 {
   "a": "A",
+  "actions": "សកម្មភាព",
   "answer": "ចម្លើយ",
   "language": "English",
   "home": "ផ្ទះ",
@@ -13,6 +14,7 @@
   "category_list": "បញ្ជីប្រភេទ",
   "create": "បង្កើត",
   "create_new": "បង្កើតថ្មី",
+  "created_at": "ថ្ងៃបង្កើត",
   "create_new_category": "បង្កើតប្រភេទថ្មី",
   "create_new_quiz": "បង្កើតសំណួរថ្មី",
   "correct_answer": "ចម្លើយត្រឺមត្រូវ",
@@ -56,6 +58,8 @@
   "try_your_challenge": "សាកល្បងសម្ថភាពរបស់អ្នក",
 
   "u": "U",
+  "update": "កែប្រែ",
+  "update_quiz": "កែប្រែ សំំណួរ",
   "user_list": "បញ្ជីអ្នកប្រើប្រាស់",
   "user_management": "ការគ្រប់គ្រង អ្នកប្រើប្រាស់",
   "update_category": "កែប្រែប្រភេទ",
