--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -24,7 +24,9 @@
 
   "d": "D",
   "delete": "Delete",
+  "do_you_want_to_delete_this_data_?": "Do you want to delete this data ?",
   "e": "E",
+  "edit": "Edit",
 
   "f": "F",
 
@@ -46,6 +48,7 @@
   "r": "R",
   "required": "Required",
   "remark": "Remark",
+  "remove": "Remove",
 
   "s": "S",
   "save": "Save",
