Added video course feature

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -19,6 +19,7 @@
   "create_new_category": " Create New Category",
   "create_new_quiz": "Create New Quiz",
   "correct": "Correct",
+  "course_list": "Course List",
   "correct_answer": "Correct Answer",
   "congratulation": "Congratulation",
 
