Completed Create-Read Course feature list

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "a": "A",
   "all_quiz_categories": "All Quiz Categories",
+  "add_new_course": "Add New Course",
   "answer": "Answer",
   "language": "ខ្មែរ",
   "home": "Home",
@@ -14,6 +15,7 @@
   "category_name": "Category Name",
   "category_list": "Category List",
   "create": "Create",
+  "credit": "Credit",
   "created_at": "Created At",
   "create_new": "Create New",
   "create_new_category": " Create New Category",
@@ -25,6 +27,7 @@
 
   "d": "D",
   "delete": "Delete",
+  "description": "Description",
   "do_you_want_to_delete_this_data_?": "Do you want to delete this data ?",
   "e": "E",
   "edit": "Edit",
@@ -36,6 +39,9 @@
 
   "i": "I",
   "image": "Image",
+
+  "m": "M",
+  "modified_at": "Modified At",
 
   "o": "O",
   "options": "Options",
@@ -74,6 +80,7 @@
   "user_management": "User Management",
 
   "v": "V",
+  "video_link": "Video Link",
   "w": "W",
   "wrong": "Wrong"
 }
