Translated a few words more

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -73,6 +73,7 @@
   "try_your_challenge": "Try your challenge",
   "u": "U",
   "update": "Update",
+  "update_course": "Update Course",
   "update_quiz": "Update quiz",
   "update_category": "Update Category",
   "update_sub_category": "Update Sub Category",
