--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,7 @@
 {
   "a": "A",
   "all_quiz_categories": "All Quiz Categories",
+  "all": "All",
   "add_new_course": "Add New Course",
   "answer": "Answer",
   "language": "ខ្មែរ",
@@ -14,7 +15,11 @@
   "category_id": "Category Id",
   "category_name": "Category Name",
   "category_list": "Category List",
-  "create": "Create",
+  "country_id": "Country Id",
+  "city_name": "City Name",
+  "city_id": "City Id",
+  "city_list": "City List",
+  "create_city": "Create City",
   "credit": "Credit",
   "created_at": "Created At",
   "create_new": "Create New",
@@ -27,6 +32,10 @@
 
   "d": "D",
   "delete": "Delete",
+  "district": "District",
+  "district_id": "District Id",
+  "district_name": "District Name",
+  "district_list": "District List",
   "description": "Description",
   "do_you_want_to_delete_this_data_?": "Do you want to delete this data ?",
   "e": "E",
@@ -65,10 +74,15 @@
   "sub_category_list": "Sub Category List",
 
   "p": "P",
+  "province": "Province",
+  "province_id": "Province Id",
+  "province_name": "Province Name",
+  "province_list": "Province List",
   "please_select_another_answer": "Please Select Another Answer",
 
   "t": "T",
   "title": "Title",
+  "tourist_site_list": "Tourist Site List",
   "the_maximum_of_answer_is": "The maximum of answer is",
   "try_your_challenge": "Try your challenge",
   "u": "U",
